Initial Implementation of Help and My Profile Popup

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <meta name="apple-mobile-web-app-title" content="Hideyoshi">
 
     <link rel="manifest" href="manifest.webmanifest">
+    <link rel="preconnect" href="https://hideyoshi-portfolio-dev.s3.amazonaws.com">
 </head>
 
 <body>
