Fixes Docker Angular Build Process

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
 
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="preconnect" href="https://hideyoshi-portfolio-dev.s3.amazonaws.com">
+
+    <!--  Loading environment variables  -->
+    <script src="assets/env.js"></script>
 </head>
 
 <body>
