--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <link rel="preconnect" href="https://hideyoshi-portfolio-dev.s3.amazonaws.com">
 
     <!--  Loading environment variables  -->
-    <script src="assets/env.js"></script>
+    <script src="./assets/env.js"></script>
 </head>
 
 <body>
